--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Lectures/COE-C1001[[:space:]]L03[[:space:]]Statics[[:space:]]Support[[:space:]]reactions filter=lfs diff=lfs merge=lfs -text
+Lectures/COE-C1001[[:space:]]L03[[:space:]]Statics[[:space:]]Support[[:space:]]reactions.pdf filter=lfs diff=lfs merge=lfs -text
